force-app/main/default/objects/Visa_Application__c/fields/Duration_Of_Stay_Days__c.field-meta.xml
<CustomField>
    <fullName>Duration_Of_Stay_Days__c</fullName>
    <label>Duration Of Stay Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>