force-app/main/default/objects/Visa_Application__c/fields/Intended_Travel_Date__c.field-meta.xml
<CustomField>
    <fullName>Intended_Travel_Date__c</fullName>
    <label>Intended Travel Date</label>
    <type>Date</type>
</CustomField>