force-app/main/default/objects/Visa_Application__c/fields/Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Passport_Number__c</fullName>
    <inlineHelpText>The issued passport this visa application is against. Cross-references Passport__c.Name as plain text — deliberately not a lookup, to avoid coupling this MVP to exact Passport__c matching logic.</inlineHelpText>
    <label>Passport Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>