force-app/main/default/objects/Visa_Application__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PSK_Payment_Status</valueSetName>
    </valueSet>
</CustomField>