force-app/main/default/objects/Visa_Application__c/fields/PSK_Office__c.field-meta.xml
<CustomField>
    <fullName>PSK_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PSK Office</label>
    <referenceTo>PSK__c</referenceTo>
    <relationshipLabel>Visa Applications</relationshipLabel>
    <relationshipName>Visa_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>