force-app/main/default/objects/Visa_Application__c/fields/Sponsor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Contact__c</fullName>
    <label>Sponsor Contact</label>
    <type>Phone</type>
</CustomField>