force-app/main/default/objects/Visa_Application__c/fields/Sponsor_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Relationship__c</fullName>
    <label>Sponsor Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PSK_Relationship</valueSetName>
    </valueSet>
</CustomField>