force-app/main/default/objects/Visa_Application__c/fields/Visa_Number__c.field-meta.xml
<CustomField>
    <fullName>Visa_Number__c</fullName>
    <inlineHelpText>The issued visa's own number, separate from External_Id__c (the integration idempotency key).</inlineHelpText>
    <label>Visa Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>